# Covidic

./: Cargo.toml  README.md
src/: covid_api.rs  formatters.rs  main.rs
