[package]
name = "covidic"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.7", features=["blocking"]}
select = "0.5.0"
colored = "2.0.0"
num-format = "0.4.0"